--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Add Task</h3>
+    <h3 class="#a7ffeb teal accent-1 center-align">Add Task</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
             <!-- category selection -->
 			<div class="row">
 				<div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-folder-open prefix #a7ffeb teal accent-1"></i>
 					<select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>Choose Category</option>
                         {% for category in categories %}
@@ -21,7 +21,7 @@
             <!-- task name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-pencil-alt prefix #a7ffeb teal accent-1"></i>
                     <input id="task_name" name="task_name" minlength="5" maxlength="50"
                         type="text" class="validate" required>
                     <label for="task_name">Task Name</label>
@@ -39,7 +39,7 @@
             <!-- due date picker -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-calendar-alt prefix #a7ffeb teal accent-1"></i>
                     <input id="due_date" name="due_date" type="text" class="datepicker validate" required>
                     <label for="due_date">Due Date</label>
                 </div>
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div class="input-field col s12">
 					<div class="switch">
-                        <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
+                        <i class="fas fa-exclamation-circle prefix #a7ffeb teal accent-1"></i>
 						<label for="is_urgent">
                             <input type="checkbox" id="is_urgent" name="is_urgent">
                             <span class="lever"></span>
@@ -60,7 +60,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    <button type="submit" class="btn-#a7ffeb teal accent-1 text-shadow">
                         Add Task <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
