--- a/templates/categories.html
+++ b/templates/categories.html
@@ -14,7 +14,7 @@
     <div class="row">
         {% for category in categories %}
             <div class="col s12 m3">
-                <div class="card light-blue darken-4 text-shadow center-align">
+                <div class="card #a7ffeb teal accent-1 text-shadow center-align">
                     <div class="card-content white-text">
                         <span class="card-title">{{ category.category_name }}</span>
                     </div>
