--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">All Tasks</h3>
+    <h3 class="#a7ffeb teal accent-1 center-align">All Tasks</h3>
 
     <ul class="collapsible">
         {% for task in tasks %}
