--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="#a7ffeb teal accent-1 center-align">{{ message }}</h4>
+                        <h4 class="light-blue darken-4 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
