--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="#a7ffeb teal accent-1 center-align">Edit Task</h3>
+    <h3 class="light-blue darken-4 accent-1 center-align">Edit Task</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
