--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
-                <h3 class="center-align #a7ffeb teal accent-1">
+                <h3 class="center-align light-blue darken-4 accent-1">
                     {{ username }}'s Profile
                 </h3>
             </div>
