--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -8,7 +8,7 @@
             <!-- category name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix #a7ffeb teal accent-1"></i>
+                    <i class="fas fa-folder-open prefix light-blue darken-4"></i>
                     <input id="category_name" name="category_name" minlength="3" maxlength="25"
                         type="text" class="validate" required>
                     <label for="category_name">Category Name</label>
@@ -17,7 +17,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large #a7ffeb teal accent-1 text-shadow">
+                    <button type="submit" class="btn-large light-blue darken-4 accent-1 text-shadow">
                         Add Category <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
