--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -5,17 +5,17 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
-            <!-- category selection -->
+            <!-- event selection -->
 			<div class="row">
 				<div class="input-field col s12">
                     <i class="fas fa-folder-open prefix #light-blue darken-4"></i>
-					<select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
-                        {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+					<select id="event_name" name="event_name" class="validate" required>
+                        <option value="" disabled selected>Choose Event</option>
+                        {% for event in events %}
+                            <option value="{{ event.event_name }}">{{ event.event_name }}</option>
                         {% endfor %}
                     </select>
-					<label for="category_name">Task Category</label>
+					<label for="event_name">Task Category</label>
 				</div>
 			</div>
             <!-- task name -->
