--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="collapsible-body">
-                <strong>{{ task.category_name }}</strong>
+                <strong>{{ task.event_name }}</strong>
                 <p>{{ task.task_description }}</p>
                 <p><em>by: {{ task.created_by }}</em></p>
             </div>
