--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue darken-4 center-align">Add Task</h3>
+    <h3 class="light-blue darken-4 center-align">Add Event</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
@@ -15,7 +15,7 @@
                             <option value="{{ event.event_name }}">{{ event.event_name }}</option>
                         {% endfor %}
                     </select>
-					<label for="event_name">Task Category</label>
+					<label for="event_name">Event</label>
 				</div>
 			</div>
             <!-- task name -->
