--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -36,19 +36,11 @@
                     <label for="task_description">Task Description</label>
                 </div>
             </div>
-            <!-- due date picker -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix light-blue darken-4"></i>
-                    <input id="due_date" name="due_date" type="text" class="datepicker validate" required>
-                    <label for="due_date">Due Date</label>
-                </div>
-            </div>
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
                     <button type="submit" class="btn-light-blue darken-4 text-shadow">
-                        Add Task <i class="fas fa-plus-square right"></i>
+                        Add Event <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
