--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -4,7 +4,7 @@
     <h3 class="light-blue darken-4 accent-1 center-align">All Events</h3>
 
     <ul class="collapsible">
-        {% for task in tasks %}
+        {% for task in registrations %}
         <li>
             <div class="collapsible-header white-text light-blue darken-4 text-shadow">
                 <div class="col s3">
