--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,7 +4,7 @@
     <h3 class="light-blue darken-4 center-align">Add Event</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+        <form class="col s12" method="POST" action="{{ url_for('add_registrations') }}">
             <!-- event selection -->
 			<div class="row">
 				<div class="input-field col s12">
