--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-4">
 			<div class="nav-wrapper">
-				<a href="{{ url_for('get_tasks') }}" class="brand-logo">Windsurf Event Planner</a>
+				<a href="{{ url_for('get_registrations') }}" class="brand-logo">Windsurf Event Planner</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+					<li><a href="{{ url_for('get_registrations') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                         <li><a href="{{ url_for('add_task') }}">Plan Event</a></li>
@@ -39,7 +39,7 @@
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue darken-4">Task Manager</h4></li>
-            <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+            <li><a href="{{ url_for('get_registrations') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('add_task') }}">New Task</a></li>
