--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -18,22 +18,22 @@
 					<label for="event_name">Event</label>
 				</div>
 			</div>
-            <!-- task name -->
+            <!-- registration name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue darken-4"></i>
-                    <input id="task_name" name="task_name" minlength="5" maxlength="50"
+                    <input id="registration_name" name="registration_name" minlength="5" maxlength="50"
                         type="text" class="validate" required>
-                    <label for="task_name">Task Name</label>
+                    <label for="registration_name">Registration Name</label>
                 </div>
             </div>
-            <!-- task description -->
+            <!-- registration description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="task_description" name="task_description" minlength="5"
+                    <textarea id="registration_description" name="registration_description" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required></textarea>
-                    <label for="task_description">Task Description</label>
+                    <label for="registration_description">Registration Description</label>
                 </div>
             </div>
             <!-- submit button -->
