--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 					<li><a href="{{ url_for('get_registrations') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('add_task') }}">Plan Event</a></li>
+                        <li><a href="{{ url_for('add_registration') }}">Plan Event</a></li>
                         {% if session.user|lower == "admin"|lower %}
                             <li><a href="{{ url_for('get_events') }}">Manage Events</a></li>
                         {% endif %}
@@ -38,11 +38,11 @@
 
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align light-blue darken-4">Task Manager</h4></li>
+            <li><h4 class="center-align light-blue darken-4">Registration Manager</h4></li>
             <li><a href="{{ url_for('get_registrations') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+                <li><a href="{{ url_for('add_registration') }}">New registration</a></li>
                 {% if session.user|lower == "admin"|lower %}
                     <li><a href="{{ url_for('get_events') }}">Manage Events</a></li>
                 {% endif %}
