--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue darken-4 accent-1 center-align">Edit Task</h3>
+    <h3 class="light-blue darken-4 accent-1 center-align">Edit registration</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
+        <form class="col s12" method="POST" action="{{ url_for('edit_registration', registration_id=registration._id) }}">
             <!-- event selection -->
 			<div class="row">
 				<div class="input-field col s12">
@@ -12,43 +12,34 @@
 					<select id="event_name" name="event_name" class="validate" required>
                         <option value="" disabled>Choose Event</option>
                         {% for event in events %}
-                            {% if event.events_name == task.event_name %}
+                            {% if event.events_name == registration.event_name %}
                                 <option value="{{ event.event_name }}" selected>{{ event.event_name }}</option>
                             {% else %}
                                 <option value="{{ event.event_name }}">{{ event.event_name }}</option>
                             {% endif %}
                         {% endfor %}
                     </select>
-					<label for="event_name">Task Event</label>
+					<label for="event_name">Registration Event</label>
 				</div>
 			</div>
-            <!-- task name -->
+            <!-- registration name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="task_name" name="task_name" minlength="5" maxlength="50"
-                        value="{{ task.task_name }}" type="text" class="validate" required>
-                    <label for="task_name">Task Name</label>
+                    <input id="registration_name" name="registration_name" minlength="5" maxlength="50"
+                        value="{{ registration.registration_name }}" type="text" class="validate" required>
+                    <label for="registration_name">Registration Name</label>
                 </div>
             </div>
-            <!-- task description -->
+            <!-- registration description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="task_description" name="task_description" minlength="5"
+                    <textarea id="registration_description" name="registration_description" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required>
-                        {{- task.task_description -}}
+                        {{- registration.registration_description -}}
                     </textarea>
-                    <label for="task_description">Task Description</label>
-                </div>
-            </div>
-            <!-- due date picker -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="due_date" name="due_date" type="text"
-                        value="{{ task.due_date }}" class="datepicker validate" required>
-                    <label for="due_date">Due Date</label>
+                    <label for="registration_description">Registration Description</label>
                 </div>
             </div>
             <!-- submit button -->
@@ -59,7 +50,7 @@
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                        Edit Task <i class="fas fa-edit right"></i>
+                        Edit Registration <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
