--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -35,11 +35,11 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="registration_description" name="registration_description" minlength="5"
+                    <textarea id="registration_comment" name="registration_comment" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required>
-                        {{- registration.registration_description -}}
+                        {{- registration.registration_comment -}}
                     </textarea>
-                    <label for="registration_description">Registration Description</label>
+                    <label for="registration_comment">Registration Comment</label>
                 </div>
             </div>
             <!-- submit button -->
