--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -20,7 +20,7 @@
             </div>
             <div class="collapsible-body">
                 <strong>{{ registration.event_name }}</strong>
-                <p>{{ registration.registration_description }}</p>
+                <p>{{ registration.registration_comment }}</p>
                 <p><em>by: {{ registration.created_by }}</em></p>
             </div>
         </li>
