--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -27,13 +27,13 @@
                     <label for="registration_name">Registration Name</label>
                 </div>
             </div>
-            <!-- registration description -->
+            <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="registration_description" name="registration_description" minlength="5"
+                    <textarea id="registration_comment" name="registration_comment" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required></textarea>
-                    <label for="registration_description">Registration Description</label>
+                    <label for="registration_comment">Registration Comment</label>
                 </div>
             </div>
             <!-- submit button -->
