--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -10,7 +10,7 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == registration.created_by|lower %}
-                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Done</a>
+                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Cancel</a>
                         <a href="{{ url_for('edit_registration', registration_id=registration._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     {% endif %}
                 </div>
