--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -27,12 +27,20 @@
                     <label for="registration_name">Registration Name</label>
                 </div>
             </div>
+              <!-- registration email adres -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+	                <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+            </div>
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="registration_comment" name="registration_comment" minlength="5"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                    <textarea id="registration_comment" name="registration_comment" minlength="0"
+                        maxlength="150" class="materialize-textarea validate"></textarea>
                     <label for="registration_comment">Registration Comment</label>
                 </div>
             </div>
