--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue darken-4 accent-1 center-align">All Events</h3>
+    <h3 class="light-blue darken-4 accent-1 center-align">All Event Registrations</h3>
 
     <ul class="collapsible">
         {% for registration in registrations %}
@@ -9,6 +9,7 @@
             <div class="collapsible-header white-text light-blue darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
+                    <strong>{{ registration.event_name }}</strong>
                     {% if session.user|lower == registration.created_by|lower %}
                         <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Cancel</a>
                         <a href="{{ url_for('edit_registration', registration_id=registration._id) }}" class="btn-small light-blue lighten-1">Edit</a>
@@ -19,7 +20,6 @@
                 </div>
             </div>
             <div class="collapsible-body">
-                <strong>{{ registration.event_name }}</strong>
                 <p>{{ registration.registration_comment }}</p>
                 <p><em>by: {{ registration.created_by }}</em></p>
             </div>
