--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -27,14 +27,7 @@
                     <label for="registration_name">Registration Name</label>
                 </div>
             </div>
-              <!-- registration email adres -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-	                <input id="email" type="email" class="validate">
-                    <label for="email">Email</label>
-                </div>
-            </div>
+            <!-- registration gender -->
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
