--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -21,6 +21,7 @@
             </div>
             <div class="collapsible-body">
                 <p>{{ registration.registration_comment }}</p>
+                <p>{{ registration.email }}</p>
                 <p><em>by: {{ registration.created_by }}</em></p>
             </div>
         </li>
