--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -22,17 +22,16 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue darken-4"></i>
-                    <input id="registration_name" name="registration_name" minlength="5" maxlength="50"
+                    <input id="registration_name" name="registration_name" minlength="2" maxlength="20"
                         type="text" class="validate" required>
                     <label for="registration_name">Registration Name</label>
                 </div>
             </div>
             <!-- registration email -->
-              <div class = "row">  
+            <div class = "row">  
                <div class = "input-field col s12">
                   <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                  <input id="Email" name="email" type="email"  
-                     class = "validate">  
+                  <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40"
                   <label for = "email">Email</label>  
                </div>  
             </div>  
