--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -26,12 +26,21 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="registration_name" name="registration_name" minlength="5" maxlength="50"
+                    <input id="registration_name" name="registration_name" minlength="2" maxlength="20"
                         value="{{ registration.registration_name }}" type="text" class="validate" required>
                     <label for="registration_name">Registration Name</label>
                 </div>
             </div>
-            <!-- registration description -->
+            <!-- registration email -->
+            <div class = "row">  
+               <div class = "input-field col s12">
+                  <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                  <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40"
+                        value="{{ registration.email }}" type="text" class="validate" required>
+                  <label for = "email">Email</label>  
+               </div>  
+            </div>  
+            <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
