--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -31,10 +31,10 @@
             <div class = "row">  
                <div class = "input-field col s12">
                   <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                  <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40"
-                  <label for = "email">Email</label>  
+                  <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40" required>
+                  <label for="email">Email</label>
                </div>  
-            </div>  
+            </div> 
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
