--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -35,6 +35,17 @@
                   <label for="email">Email</label>
                </div>  
             </div> 
+            <!-- registration gender -->
+            <p>
+            <label>
+            <input name="male" type="radio" />
+            <span>Male</span>
+            </label>
+            <label>
+            <input name="female" type="radio" />
+            <span>Female</span>
+            </label>
+            </p>
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
