--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -38,11 +38,11 @@
             <!-- registration gender -->
             <p>
             <label>
-            <input name="male" type="radio" />
+            <input name="gender" type="radio" value="male" checked/>
             <span>Male</span>
             </label>
             <label>
-            <input name="female" type="radio" />
+            <input name="gender" type="radio" value="female"/>
             <span>Female</span>
             </label>
             </p>
