--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -35,8 +35,8 @@
             <div class = "row">  
                <div class = "input-field col s12">
                   <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                  <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40"
-                        value="{{ registration.email }}" type="text" class="validate" required>
+                  <input id="Email" name="email" minlength="5" maxlength="40"
+                    value="{{ registration.email }}" type="email" class="validate" required>
                   <label for = "email">Email</label>  
                </div>  
             </div>  
