--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -20,8 +20,9 @@
                 </div>
             </div>
             <div class="collapsible-body">
-                <p>{{ registration.registration_comment }}</p>
                 <p>{{ registration.email }}</p>
+                <p>{{ registration.gender }}</p>
+                <p>{{ registration.registration_comment }}</p>
                 <p><em>by: {{ registration.created_by }}</em></p>
             </div>
         </li>
