--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -40,6 +40,17 @@
                   <label for = "email">Email</label>  
                </div>  
             </div>  
+            <!-- registration gender -->
+            <p>
+            <label>
+            <input name="gender" type="radio" value="male" checked/>
+            <span>Male</span>
+            </label>
+            <label>
+            <input name="gender" type="radio" value="female"/>
+            <span>Female</span>
+            </label>
+            </p>
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
