--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -46,6 +46,14 @@
             <span>Female</span>
             </label>
             </p>
+            <!-- registration birthday -->
+             <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <input type=text name="bdate" id="bdate" class="datepicker" required>
+                <label for="bdate">Birthday</label>
+                </div>
+            </div>
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
