--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -47,13 +47,12 @@
             </label>
             </p>
             <!-- registration birthday -->
-             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <input type=text name="bdate" id="bdate" class="datepicker" required>
-                <label for="bdate">Birthday</label>
-                </div>
-            </div>
+            <div class = "row">
+            <div class="input-field col s3">
+                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>                         
+            <input type = "date" class = "datepicker" />    
+            <label for="bdate">Birthday</label>
+            </div>                
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
