--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -50,7 +50,7 @@
             <div class = "row">
             <div class="input-field col s3">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>                         
-            <input type = "date" class = "datepicker" />    
+            <input name="birthday" type = "date" class = "datepicker" />    
             <label for="bdate">Birthday</label>
             </div>                
             <!-- registration comment -->
