--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -51,6 +51,13 @@
             <span>Female</span>
             </label>
             </p>
+            <!-- registration birthday -->
+            <div class = "row">
+            <div class="input-field col s3">
+                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>                         
+            <input name="birthday" value="{{ registration.birthday }}" type="date" class = "datepicker" />    
+            <label for="bdate">Birthday</label>
+            </div>
             <!-- registration comment -->
             <div class="row">
                 <div class="input-field col s12">
