--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -22,6 +22,7 @@
             <div class="collapsible-body">
                 <p>{{ registration.email }}</p>
                 <p>{{ registration.gender }}</p>
+                <p>{{ registration.birthday }}</p>
                 <p>{{ registration.registration_comment }}</p>
                 <p><em>by: {{ registration.created_by }}</em></p>
             </div>
