--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -43,7 +43,7 @@
             <!-- registration gender -->
             <p>
             <label>
-            <input name="gender" type="radio" value="male" checked/>
+            <input name="gender" type="radio" value="male"/>
             <span>Male</span>
             </label>
             <label>
