--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,37 @@
         {% endblock %}
     </main>
 
+    
+        <footer class="page-footer light-blue darken-4">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square grey-text text-lighten-6"></i></a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+                 <p class="media-icons">
+                 © 2020 Copyright Remco Kes
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x right"></i></a>
+                        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square fa-2x right"></i></a>   
+                        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram-square fa-2x right"></i></a>
+                  </p>
+            </div>
+          </div>
+        </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
