--- a/templates/base.html
+++ b/templates/base.html
@@ -71,9 +71,9 @@
         {% block content %}
         {% endblock %}
     </main>
-
+ 
     
-        <footer class="page-footer light-blue darken-4">
+        <footer class="page-footer" style="background-image : url('https://cdn.pixabay.com/photo/2019/03/18/17/58/wave-4063684_960_720.jpg');background-size: cover;background-position: center; ">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
