--- a/templates/base.html
+++ b/templates/base.html
@@ -74,21 +74,8 @@
  
     
         <footer class="page-footer" style="background-image : url('https://cdn.pixabay.com/photo/2019/03/18/17/58/wave-4063684_960_720.jpg');background-size: cover;background-position: center; ">
-          <div class="container">
+          <div class="container" style="height:110px">
             <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square grey-text text-lighten-6"></i></a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
             </div>
           </div>
           <div class="footer-copyright">
