--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
     <title>Windsurf Event Planner</title>
 </head>
-<body>
+<body style="background-image:url(https://cdn.pixabay.com/photo/2017/01/24/10/58/sand-2005066_960_720.jpg);background-size:cover">
 
 	<header>
         <!-- top navbar -->
