--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-4">
 			<div class="nav-wrapper">
-				<a href="{{ url_for('get_registrations') }}" class="brand-logo">Windsurf Event Planner</a>
+				<a href="{{ url_for('get_registrations') }}" style="padding-left:10px" class="brand-logo">Windsurf Event Planner <i class="fas fa-water"></i></a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_registrations') }}">Home</a></li>
