--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 	<header>
         <!-- top navbar -->
-		<nav class="nav-extended text-shadow light-blue darken-4">
+		<nav class="nav-extended text-shadow #00acc1 cyan darken-1">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('get_registrations') }}" style="padding-left:10px" class="brand-logo">Windsurf Event Planner <i class="fas fa-water"></i></a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
