--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue darken-4 accent-1 center-align">All Event Registrations</h3>
+    <h3 class="#d7ccc8 brown lighten-4 accent-1 center-align">All Event Registrations</h3>
 
     <ul class="collapsible">
         {% for registration in registrations %}
         <li>
-            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
+            <div class="collapsible-header white-text #00acc1 cyan darken-1 text-shadow">
                 <div class="col s12">
                     <i class="fas fa-caret-down"></i>
                     <strong>{{ registration.event_name }}</strong>
