--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -12,8 +12,8 @@
                     <strong>{{ registration.event_name }}</strong>
                     <strong>{{ registration.registration_name }}</strong>
                     {% if session.user|lower == registration.created_by|lower %}
-                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Cancel</a>
-                        <a href="{{ url_for('edit_registration', registration_id=registration._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        <a href="{{ url_for('edit_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Edit</a>
+                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small red">Cancel</a>
                     {% endif %}
                 </div>
             </div>
