--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -17,7 +17,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="collapsible-body">
+            <div class="collapsible-body #d7ccc8 brown lighten-4">
                 <p><label>Email&nbsp</label>{{ registration.email }}</p>
                 <p><label>Gender&nbsp</label>{{ registration.gender }}</p>
                 <p><label>Birthday&nbsp</label>{{ registration.birthday }}</p>
