--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Add Event</h3>
+    <h3 class="#00acc1 cyan darken-1 center-align">Add Event</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_event') }}">
             <!-- event name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix light-blue darken-4"></i>
+                    <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                     <input id="event_name" name="event_name" minlength="3" maxlength="25"
                         type="text" class="validate" required>
                     <label for="event_name">Event Name</label>
                 </div>
             </div>
             <!-- submit button -->
-            <div class="row">
+           <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-4 accent-1 text-shadow">
-                        Add Event <i class="fas fa-plus-square right"></i>
+                    <a href="{{ url_for('get_events') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Edit Event <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
