--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -13,7 +13,6 @@
                     <strong>{{ registration.registration_name }}</strong>
                     {% if session.user|lower == registration.created_by|lower %}
                         <a href="{{ url_for('edit_registration', registration_id=registration._id) }}" class="btn-small green accent-4">Edit</a>
-                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small red">Cancel</a>
                     {% endif %}
                 </div>
             </div>
@@ -23,6 +22,9 @@
                 <p><label>Birthday&nbsp</label>{{ registration.birthday }}</p>
                 <p><label>Comment&nbsp</label>{{ registration.registration_comment }}</p>
                 <p><label>Username&nbsp</label>{{ registration.created_by }}</p>
+                    {% if session.user|lower == registration.created_by|lower %}
+                        <a href="{{ url_for('delete_registration', registration_id=registration._id) }}" class="btn-small red">Cancel</a>
+                    {% endif %}
             </div>
         </li>
         {% endfor %}
