--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -15,13 +15,10 @@
                 </div>
             </div>
             <!-- submit button -->
-           <div class="row">
+              <div class="row">
                 <div class="col s12 center-align">
-                    <a href="{{ url_for('get_events') }}" class="btn-large red text-shadow">
-                        Cancel <i class="fas fa-times-circle right"></i>
-                    </a>
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                        Edit Event <i class="fas fa-edit right"></i>
+                        Add Task <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
