--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue darken-4 center-align">Add Event</h3>
+    <h3 class="#00acc1 cyan darken-1 center-align">Add Event</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_registration') }}">
             <!-- event selection -->
 			<div class="row">
 				<div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix #light-blue darken-4"></i>
+                    <i class="fas fa-folder-open prefix #00acc1 cyan darken-1"></i>
 					<select id="event_name" name="event_name" class="validate" required>
                         <option value="" disabled selected>Choose Event</option>
                         {% for event in events %}
@@ -21,7 +21,7 @@
             <!-- registration name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix light-blue darken-4"></i>
+                    <i class="fas fa-pencil-alt prefix #00acc1 cyan darken-1"></i>
                     <input id="registration_name" name="registration_name" minlength="2" maxlength="20"
                         type="text" class="validate" required>
                     <label for="registration_name">Registration Name</label>
@@ -63,10 +63,10 @@
                 </div>
             </div>
             <!-- submit button -->
-            <div class="row">
+          <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-light-blue darken-4 text-shadow">
-                        Add Event <i class="fas fa-plus-square right"></i>
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Add Task <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
