--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -3,7 +3,7 @@
 
     <h3 class="#00acc1 cyan darken-1 center-align">Edit registration</h3>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_registration', registration_id=registration._id) }}">
             <!-- event selection -->
 			<div class="row">
