--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="#d7ccc8 brown lighten-4 accent-1 center-align">All Event Registrations</h3>
+    <h3 class="#d7ccc8 brown lighten-4 accent-1 white-text text-shadow center-align">All Event Registrations</h3>
 
     <ul class="collapsible">
         {% for registration in registrations %}
