--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="#00acc1 cyan darken-1 center-align">Register Event</h3>
+    <h3 class="#00acc1 cyan darken-1 center-align white-text text-shadow">Register Event</h3>
 
     <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_registration') }}">
