--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel #efebe9 brown lighten-5">
-                <h3 class="center-align #00acc1 cyan darken-1">
+                <h3 class="center-align #00acc1 cyan darken-1 white-text text-shadow">
                     {{ username }}'s Profile
                 </h3>
             </div>
