--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-                 <p class="media-icons">
+                 <p class="media-icons black-text center">
                  © 2020 Copyright Remco Kes
                         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x right"></i></a>
                         <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square fa-2x right"></i></a>   
