--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,8 +7,8 @@
                 <h3 class="center-align #00897b teal darken-1 white-text text-shadow">
                     {{ username }}'s Profile
                 </h3>
-                <img src="https://cdn.pixabay.com/photo/2017/04/08/03/41/windsurfing-2212364__340.jpg" width="315" height="315">
-                <img src="https://cdn.pixabay.com/photo/2017/12/28/18/40/windsurfing-3045927__340.jpg" width="315" height="315">
+                <div class="card-panel" style="background-image : url('https://cdn.pixabay.com/photo/2017/04/08/03/41/windsurfing-2212364__340.jpg');background-size: cover;background-position: center;height:300px">
+                </div>
             </div>
         </div>
     </div>
