--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -60,7 +60,7 @@
                     <i class="far fa-comment prefix cyan-text"></i>
                     <textarea id="registration_comment" name="registration_comment" minlength="0"
                         maxlength="150" class="materialize-textarea validate"></textarea>
-                    <label for="registration_comment">Registration Comment</label>
+                    <label for="registration_comment">Comment</label>
                 </div>
             </div>
             <!-- submit button -->
