--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -67,7 +67,7 @@
                         maxlength="200" class="materialize-textarea validate" required>
                         {{- registration.registration_comment -}}
                     </textarea>
-                    <label for="registration_comment">Registration Comment</label>
+                    <label for="registration_comment">Comment</label>
                 </div>
             </div>
             <!-- submit button -->
