--- a/templates/edit_registration.html
+++ b/templates/edit_registration.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="#00897b teal darken-1 center-align">Edit registration</h3>
+    <h3 class="#00897b teal darken-1 center-align">Edit Registration</h3>
 
     <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_registration', registration_id=registration._id) }}">
