--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -17,7 +17,7 @@
             <!-- submit button -->
               <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    <button type="submit" class="btn-large #00897b teal darken-1 white-text center-align text-shadow">
                         Add Event <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
